--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" id="root">
 <head>
-	<link rel='shortcut icon' src='https://alexander-rd.herokuapp.com/favicon.ico' type='image/x-icon'/ >
+	<link rel='shortcut icon' src='https://alexander-rd.herokuapp.com/favicon.ico' type='image/x-icon'/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +33,7 @@
 		text-align:center;
 		position: fixed;
 		width: 50%;
-		height: 80%;
+		height: 60%;
 		top: 10%;
 		left: 25%;
 	}
@@ -155,7 +155,6 @@
 <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque pulvinar at ante at tempor. Sed ultricies ullamcorper neque, vel viverra orci rhoncus nec. In et erat sit amet neque interdum pulvinar. Vestibulum interdum diam non ante posuere efficitur. Etiam at interdum mauris. Maecenas in cursus velit, sed tempor enim. Duis at odio non nulla porta porttitor. Praesent varius vel urna ac vehicula. Nulla laoreet metus eget tempor gravida.
 </p>
-<div class="g-signin2" data-onsuccess="onSignIn"></div>
 <p>
 Curabitur lobortis nulla eu ante luctus, finibus laoreet nisi consectetur. Praesent quis nisl eget est aliquet accumsan quis eu lacus. Nulla aliquet dapibus pretium. Integer scelerisque lacus nec sem dictum, quis pretium nisl aliquam. Curabitur a mi at sem porttitor convallis. Nam eu rhoncus quam. Aenean quis diam eu ligula maximus dapibus. Phasellus sollicitudin in lectus ut eleifend. Sed et suscipit dui. Ut efficitur erat rutrum velit eleifend gravida. Aliquam vel sagittis dui, id tincidunt est. Nam ac suscipit nisl. In odio dui, venenatis in dui tristique, finibus porta metus. Nunc aliquam velit et eros hendrerit, eget bibendum enim euismod. Fusce fringilla vitae erat vitae dictum.
 </p>
@@ -193,7 +192,11 @@ Ut sit amet ipsum dui. Integer rutrum euismod felis sed aliquet. Aenean bibendum
 </div>
 <div>
 <p>Or use one of the following login options</p>
-<a href="#"><div class="g-signin2" data-onsuccess="onSignIn"></div></a>
+<div class="row justify-content-center">
+	<div class="col"><br></div>
+	<div class="col"><a href="#"><div class="g-signin2" data-onsuccess="onSignIn"></div></a></div>
+	<div class="col"><br></div>
+</div>
 </div>
 
 </div>
